question , half of tutorial

--- a/template/tutorial.html
+++ b/template/tutorial.html
@@ -1,7 +1,7 @@
 {% extends "master.html" %}
 
 {% block title %}
-Academic
+tutorial
 {% endblock %}
 {% block content %}
 {% include 'academic_header' %}
@@ -13,59 +13,117 @@ Academic
       id="myInput"
       onkeyup="myFunction()" placeholder="Search for Department..">
     <ul class="list-unstyled text-start" id="sortable-list">
-      {% for department_list in department_list %}
-      <li><a class="nav-link" href="#{{ department_list.department }} ">{{ department_list.department }}</a></li>
-      {% endfor %}
-    </ul>
-  </div>
-  
-  <div class="col-9  p-3 text-center">
+      
+        {% for department_list in department_list %}
+        <li><a class="nav-link" href="#{{ department_list.department }} ">{{ department_list.department }}</a></li>
+        {% endfor %}
+      </ul>
+    </div>
     
-    <div class="text-end">
-      <button type="button" class="btn btn-sm btn-info mx-3" data-bs-toggle="modal"
-      data-bs-target="#add_syllabus">Add tutorials</button>
-  </div>
-
-  {% if error_message %}
-        <p style="color: red;">Error: {{ error_message|upper }}</p>
-  {% endif %}
-  {% for department_list in department_list %}
-  <div id="{{ department_list.department }}" class="card text-dark bg-light m-4"
-    style="max-width:100%; ">
-    <div class="card-header d-inline-flex ">
-      <div class="flex-fill">{{ department_list.department }}</div>
-
+    <div class="col-9  p-3 text-center">
+      {% if request.user.is_superuser %}
+      <div class="text-end">
+        <button type="button" class="btn btn-sm btn-info mx-3" data-bs-toggle="modal"
+        data-bs-target="#tutorial">Add tutorial</button>
     </div>
+    {%endif%}
+    {% if error_message %}
+          <p style="color: red;">Error: {{ error_message|upper }}</p>
+    {% endif %}
+    {% for department_list in department_list %}
+    <div id="{{ department_list.department }}" class="card text-dark bg-light m-4"
+      style="max-width:100%; ">
+      <div class="card-header d-inline-flex ">
+        <div class="flex-fill">{{ department_list.department }}</div>
+  
+      </div>
+  
+      <div class="card m-4 p-3">
+        <ul id="sortable-list2" class="list-group list-group-flush">
+        
+        {%for tutorial_list in tutorial_list%}
+        {% if department_list.department == tutorial_list.tutorial.department.department %}
+          {% if tutorial_list.pdf_file.url %}
+          <li class="list-group-item" style=" display: flex; list-style: none;
+          justify-content: space-between; align-items: center; margin-right: 10px;">
+              <a href="{{ tutorial_list.pdf_file.url }}" target="_blank"> {{ tutorial_list.course_name }} {{ tutorial_list.tutorial.faculty_name }}</a>
+              <div style="display:flex; justify-content:space-between; align-items: center; ">
+                <form action="{% url 'delete_tutorial' %}" method="POST" enctype="multipart/form-data">
+                {% csrf_token %}
+                <input type="hidden" name="department_name" value="{{  department_list.department}}">
+                <input type="hidden" name="faculty" value="{{tutorial_list.tutorial.faculty_name }}">
+                
+                <button type="submit" class="btn btn-outline-danger mx-3">Delete</button>
+                </form>
+                <form action="{% url 'delete_tutorial' %}" method="POST" enctype="multipart/form-data">
+                  {% csrf_token %}
+                  <input type="hidden" name="department_name" value="{{  department_list.department}}">
+                <input type="hidden" name="faculty" value="{{tutorial_list.tutorial.faculty_name }}">
+                <input type="hidden" name="course_name" value="{{tutorial_list.course_name }}">
+                <button type="submit" class="btn btn-outline-info mx-3"  data-bs-toggle="modal"
+                data-bs-target="#edit_tutorial">Edit</button>
+                </form>
+                <div class="modal fade" id="edit_tutorial" tabindex="-1"
+                aria-labelledby="addLabel" aria-hidden="true">
+                <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+                  <div class="modal-content">
+                    <div class="modal-header">
+                      <h5 class="modal-title" id="addLabel">Add the tutorial with faculty</h5>
+                      <button type="button" class="btn-close" data-bs-dismiss="modal"
+                        aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
 
-    <div class="card m-4 p-3">
-      <ul  id="sortable-list2">
-      
-      {%for tutorial_list in tutorial_list%}
-      {% if department_list.department == tutorial_list.tutorial.department.department %}
-        {% if tutorial_list.pdf_file.url %}
-          <li><a href="{{ tutorial_list.pdf_file.url }}" target="_blank"> {{ tutorial_list.course_name }} {{ tutorial_list.faculty.faculty_name }}</a></li>
+                      <form action="{% url 'tutorial' %}" method="POST" enctype="multipart/form-data">
+                        {% csrf_token %}
+                        <div class="mb-3">
+                          <label for ='department_name' class="form-label"><strong>Department Name: </strong></label><a href="{% url 'new_dept' %}" target="_blank">New department</a>
+                          <input type="text" class="form-control" name="department_name" value="{{  department_list.department}}">
+                        </div>
+                        <div class="form-group my-2">
+                          <label class="form-label" for="faculty"><strong>faculty: </strong></label>
+                          <input type="text" class="form-control" name="faculty" value="{{tutorial_list.tutorial.faculty_name }}">
+                        </div>
+                        <div class="form-group my-2">
+                          <label class="form-label" for="course_name"><strong>Course Name:</strong></label>
+                          <input type="text" class="form-control" name="course_name" required>
+                        </div>
+                        <div class="form-group my-2">
+                          <label class="form-label" for="pdfFile"><strong>Choose a PDF file: </strong></label>
+                          <input type="file" class="form-control-file" id="pdfFile" name="pdfFile"  value="{{ tutorial_list.pdf_file.url }}">
+                        </div>
+                        <div class="text-center m-3">
+                          <button type="submit" class="btn btn-primary">Edit</button>
+                        </div>
+
+                      </form>
+                    </div>
+                  </div>
+                </div>
+              
+              </div>
+            </li>
+          {%endif%}
         {%endif%}
-      {%endif%}
-     
-      {%endfor%}
-      </ul>
-      </ul>
-      
+       
+        {%endfor%}
+        </ul>
+       
+        
+      </div>
     </div>
-  </div>
-{% endfor %}
-
-
+  {% endfor %}
+  
   </div>
 </div>
 
 <!-- modal -->
-<div class="modal fade" id="add_syllabus" tabindex="-1"
+<div class="modal fade" id="tutorial" tabindex="-1"
   aria-labelledby="addLabel" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="addLabel">Add the tutorial</h5>
+        <h5 class="modal-title" id="addLabel">Add the tutorial with faculty</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal"
           aria-label="Close"></button>
       </div>
@@ -73,27 +131,26 @@ Academic
 
         <form action="{% url 'tutorial' %}" method="POST" enctype="multipart/form-data">
           {% csrf_token %}
-
           <div class="mb-3">
-            <label for ='department_name' class="form-label">Department Name:</label>
+            <label for ='department_name' class="form-label"><strong>Department Name: </strong></label><a href="{% url 'new_dept' %}" target="_blank">New department</a>
+
             <select class="form-control" id="department_name" name="department_name">
-              <option value="">Select</option>
               {% for dept in department_list %}
                   <option value="{{dept.department}}">{{dept.department}}</option>
               {% endfor %}
             </select>
           </div>
           <div class="form-group my-2">
-            <label class="form-label" for="faculty">faculty:</label>
+            <label class="form-label" for="faculty"><strong>Faculty:</strong></label>
             <input type="text" class="form-control" name="faculty" required>
           </div>
           <div class="form-group my-2">
-            <label class="form-label" for="course_name">Course Name:</label>
+            <label class="form-label" for="course_name"><strong>Course Name:</strong></label>
             <input type="text" class="form-control" name="course_name" required>
           </div>
           <div class="form-group my-2">
-            <label class="form-label" for="file">Choose a PDF file:</label>
-            <input type="file" class="form-control-file" id="file" name="file" accept=".pdf, .mp4, .avi, .mkv" required>
+            <label class="form-label" for="pdfFile"><strong>Choose a PDF file:</strong></label>
+            <input type="file" class="form-control-file" id="pdfFile" name="pdfFile" required>
           </div>
           <div class="text-center m-3">
             <button type="submit" class="btn btn-primary">Upload</button>
