--- a/template/routine.html
+++ b/template/routine.html
@@ -127,7 +127,8 @@ routine
         <form action="{% url 'add_routine' %}" method="POST" enctype="multipart/form-data">
           {% csrf_token %}
           <div class="mb-3">
-            <label for ='department_name' class="form-label">Department Name:</label>
+            <label for ='department_name' class="form-label"><strong>Department Name: </strong></label><a href="{% url 'new_dept' %}" target="_blank">New department</a>
+
             <select class="form-control" id="department_name" name="department_name">
               {% for dept in department_list %}
                   <option value="{{dept.department}}">{{dept.department}}</option>
@@ -135,11 +136,11 @@ routine
             </select>
           </div>
           <div class="form-group my-2">
-            <label class="form-label" for="session">Session:</label>
+            <label class="form-label" for="session"><strong>Session:</strong></label>
             <input type="text" class="form-control" name="session" required>
           </div>
           <div class="form-group my-2">
-            <label class="form-label" for="pdfFile">Choose a PDF file:</label>
+            <label class="form-label" for="pdfFile"><strong>Choose a PDF file:</strong></label>
             <input type="file" class="form-control-file" id="pdfFile" name="pdfFile" required>
           </div>
           <div class="text-center m-3">
